--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+  <meta charset='utf-8'>
+</head>
+
 <body>
 
+  <div id = "search">
+    <input id = "searchbar" type="text" placeholder="🔍 Search your accent...">
+  </div>
+
   <div id = "root">
-    <p> &agrave </p>
-    <p> &egrave </p>
+    <p> à </p>
+    <p> è </p>
   </div>
 
 </body>
