Added Search Query Text Nodes
 - Added a list of H1 Search Query text nodes in popup.js
 - Changed placeholder text in popup.html
 - TODO: Make Search query characters in array instead of single H1 and use a custom class with css to draw

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -8,7 +8,7 @@
 <body>
 
   <div id = "search">
-    <input id = "searchbar" type="text" placeholder="🔍 Search your accent...">
+    <input id = "searchbar" type="text" placeholder="🔍 Search for your accent...">
   </div>
 
   <div id = "root">
