--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -3,22 +3,17 @@
 
 <head>
   <meta charset='utf-8'>
+  <script src="src/js/popup.js"></script>
 </head>
 
 <body>
 
-  <div id = "search">
-    <input id = "input" type="text" placeholder="🔍 Search for your accent...">
-    <script>
-      setInterval(function() { ObserveInputValue($('#input').val()); }, 100);
-    </script>
-  </div>
+  <input id = "input_field" type="text" placeholder="🔍 Search for your accent..."/>
 
   <div id = "root">
-    <p> à </p>
-    <p> è </p>
+    <p> Clear me! </p>
   </div>
-
+  
 </body>
 
 </html>
