--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset='utf-8'>
-  <script src="src/js/popup.js"></script>
 </head>
 
 <body>
 
-  <input id = "input_field" type="text" placeholder="🔍 Search for your accent..."/>
+  <input type="text" id="input_field" placeholder="🔍 Search for your accent..."/>
 
   <div id = "root">
     <p> Clear me! </p>
   </div>
-  
+
 </body>
 
 </html>
