--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -8,10 +8,12 @@
 
 <body>
 
-  <input type="text" id="input_field" placeholder="🔍 Search for your accent..."/>
+  <div id = "search">
+    <input type="text" id="input_field" placeholder="🔍 Search for your accent..."/>
+  </div>
 
   <div id = "root">
-    <p> Clear me! </p>
+    <p> Search to continue </p>
   </div>
 
 </body>
