--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset='utf-8'>
+  <link rel="stylesheet" href="/src/css/styles.css">
   <script src="/src/js/popup.js"></script>
 </head>
 
